--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-hello world
+<html>
+<head>
+<meta charset='uft-8'>
+</head>
+<body>
+  <h1>Scratch.mit.edu</h1>
+  <h2>is my favourite website</h2>
