--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@
 <body>
   <h1>Scratch.mit.edu</h1>
   <h2>is my favourite website</h2>
+  <a href="https://scratch.mit.edu">This is the link to the website</a>
