--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <h1>Scratch.mit.edu</h1>
   <h2>is my favourite website</h2>
-  <a href="https://scratch.mit.edu">This is the link to the website</a>
+  <a href="https://scratch.mit.edu">This is the link to the website</a><br>
   <iframe src="https://scratch.mit.edu/projects/564446250/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-  that is a example of a game
+  <br><h2>that is a example of a game</h2>
   <a href="https://scratch.mit.edu/projects/editor">This is the link to create your own project</a>
