--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
   <iframe src="https://scratch.mit.edu/projects/586505105/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   <br><h2>that is a example of a game</h2>
   <a href="https://scratch.mit.edu/projects/editor">This is the link to create your own project</a>
-  <a href="https://scratch.mit.edu/users/omarrpo1234">Check out my account here</a>
+  <br>
+  <a href="https://scratch.mit.edu/users/omarpro1234">Check out my account here</a>
