--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<meta charset='uft-8'>
+<meta charset="uft-8">
+<meta name="veiwport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <h1>Scratch.mit.edu</h1>
