--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <h2>is my favourite website</h2>
   <a href="https://scratch.mit.edu">This is the link to the website</a><br>
   <iframe src="https://scratch.mit.edu/projects/586505105/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-  <br><h2>that is a example of a project</h2>
+  <iframe src="https://scratch.mit.edu/projects/565191821/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <br><h2>there are examples of projects</h2>
   <a href="https://scratch.mit.edu/projects/editor">This is the link to create your own project</a>
   <br>
   <a href="https://scratch.mit.edu/users/omarpro1234">Check out my account here</a>
