--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head>
 <meta charset="uft-8">
@@ -9,6 +10,9 @@
   <a href="https://scratch.mit.edu">This is the link to the website</a><br>
   <iframe src="https://scratch.mit.edu/projects/586505105/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   <iframe src="https://scratch.mit.edu/projects/564446250/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <iframe src="https://scratch.mit.edu/projects/560909515/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   <br><h2>they are examples of projects</h2>
   <a href="https://scratch.mit.edu/projects/editor">This is the link to create your own project</a><br>
   <a href="https://kiki-cat-2020.github.io/kiki-cat-2020/">Check out this website</a>
+</body>
+</html>
