--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   <br><h2>they are examples of projects</h2>
   <a href="https://scratch.mit.edu/projects/editor">This is the link to create your own project</a><br>
   <a href="https://kiki-cat-2020.github.io/kiki-cat-2020/">Check out this website</a>
+  <a href="https://coderpro1234.github.io/scratch-games/">Check out this website fo more scratch projects</a>
 </body>
 </html>
