--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <iframe src="https://scratch.mit.edu/projects/570898371/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   <br><h2>they are examples of projects</h2>
   <a href="https://scratch.mit.edu/projects/editor">This is the link to create your own project</a><br>
-  <a href="https://kiki-cat-2020.github.io/kiki-cat-2020/">Check out this website</a>
+  <a href="https://kiki-cat-2020.github.io/kiki-cat-2020/">Check out this website</a><br>
   <a href="https://coderpro1234.github.io/scratch-games/">Check out this website fo more scratch projects</a>
 </body>
 </html>
