--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
 <meta charset="uft-8">
 <meta name="veiwport" content="width=device-width, initial-scale=1">
+<li class="links"><a href="#projects">Projects</a></li>
 </head>
 <body>
   <h1>Scratch.mit.edu</h1>
   <h2>is my favourite website</h2>
+  <section id="projects">
   <a href="https://scratch.mit.edu">This is the link to the website</a><br>
   <iframe src="https://scratch.mit.edu/projects/586505105/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   <iframe src="https://scratch.mit.edu/projects/564446250/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   <iframe src="https://scratch.mit.edu/projects/560909515/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   <iframe src="https://scratch.mit.edu/projects/570898371/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   <br><h2>they are examples of projects</h2>
+  </section>
   <a href="https://scratch.mit.edu/projects/editor">This is the link to create your own project</a><br>
   <a href="https://kiki-cat-2020.github.io/kiki-cat-2020/">Check out this website</a><br>
 </body>
