--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <title>Scratch</title>
 <meta charset="uft-8">
 <meta name="veiwport" content="width=device-width, initial-scale=1">
 <li class="links"><a href="#projects">Projects</a></li>
