--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="uft-8">
 <meta name="veiwport" content="width=device-width, initial-scale=1">
 <li class="links"><a href="#projects">Projects</a></li>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Scratch.mit.edu</h1>
