--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Scratch.mit.edu</h1>
   <h2>is my favourite website</h2>
   <li class="links"><a href="#projects">Projects</a></li>
-  <li class="links"><a href="#links">Projects</a></li>
+  <li class="links"><a href="#links">Links</a></li>
   <a href="https://scratch.mit.edu">This is the link to the website</a><br>
   <section id="projects">
   <iframe src="https://scratch.mit.edu/projects/586505105/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
