--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
 <head>
-  <title>Scratch</title>
+<title>Scratch</title>
 <meta charset="uft-8">
 <meta name="veiwport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <section id="intro">
