--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
   <iframe src="https://scratch.mit.edu/projects/564446250/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   <iframe src="https://scratch.mit.edu/projects/560909515/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   <iframe src="https://scratch.mit.edu/projects/570898371/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-  <br><h2>they are examples of projects</h2>
+  <br><h2>they are examples of projects</h2>br>
   </section>
-  <br>
   <section id="links">
   <a href="https://scratch.mit.edu">This is the link to the website</a><br>
   <a href="https://scratch.mit.edu/projects/editor">This is the link to create your own project</a><br>
