--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta charset="uft-8">
 <meta name="veiwport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
+<style>
+background: linear-gradient(#42e3cd 0%,#137e87 100%);
+</style>
 </head>
 <body>
   <section id="intro">
