--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="veiwport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <style>
-background: linear-gradient(#42e3cd 0%,#137e87 100%);
+background:#137e87
 </style>
 </head>
 <body>
