--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section id="links">
   <a href="https://scratch.mit.edu">This is the link to the website</a><br>
   <a href="https://scratch.mit.edu/projects/editor">This is the link to create your own project</a><br>
-    <a hraf="https://coderpro1234.github.io/nasa/">Check out my nasa web page</a><br>
+  <a href="https://coderpro1234.github.io/nasa/">Check out my nasa web page</a><br>
   </section>
 </body>
 </html>
