--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <section id="intro">
+  <a href="https://coderpro1234.github.io">Home</a><br>
   <h1>Scratch.mit.edu</h1>
   <h2>is my favourite website</h2>
   <li class="links"><a href="#intro">Title</a></li>
@@ -20,7 +21,6 @@
   <section id="links">
   <a href="https://scratch.mit.edu">This is the link to the website</a><br>
   <a href="https://scratch.mit.edu/projects/editor">This is the link to create your own project</a><br>
-  <a href="https://coderpro1234.github.io/nasa/">Check out my nasa web page</a><br>
   </section>
 </body>
 </html>
