--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <section id="intro">
+    <h1>Welcome to my scratch review</h1>
   <a href="https://coderpro1234.github.io">Home</a><br>
   <h1>Scratch.mit.edu</h1>
   <h2>is my favourite website</h2>
