--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <iframe src="https://scratch.mit.edu/projects/595598460/embed" allowtransparency="true" width="970" height="780" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </section>
   <section id="links">
-  <a href="https://scratch.mit.edu">This is the link to the website</a><br>
-  <a href="https://scratch.mit.edu/projects/editor">This is the link to create your own project</a><br>
+  <a href="https://scratch.mit.edu" target="_blank">This is the link to the website</a><br>
+  <a href="https://scratch.mit.edu/projects/editor" target="_blank">This is the link to create your own project</a><br>
   </section>
 </body>
 </html>
