--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <section id="intro">
     <h1>Welcome to my scratch review</h1>
-  <a href="https://coderpro1234.github.io">Home</a><br>
+  <a href="https://coderpro1234.github.io/pages">Back to pages</a><br>
   <h1>Scratch.mit.edu</h1>
   <h2>is my favourite website</h2>
   <li class="links"><a href="#intro">Title</a></li>
