--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <section id="all"
   <section id="intro">
     <h1>Welcome to my scratch review</h1>
   <a href="https://coderpro1234.github.io/pages">Back to pages</a><br>
@@ -22,6 +23,7 @@
   <section id="links">
   <a href="https://scratch.mit.edu" target="_blank">This is the link to the website</a><br>
   <a href="https://scratch.mit.edu/projects/editor" target="_blank">This is the link to create your own project</a><br>
+  </section>
   </section>
 </body>
 </html>
