--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section id="all"
+  <section id="all">
   <section id="intro">
     <h1>Welcome to my scratch review</h1>
   <a href="https://coderpro1234.github.io/pages">Back to pages</a><br>
