--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
   <section id="all">
   <h1>Welcome to my scratch review</h1>
-  <a href="https://coderpro1234.github.io/pages">Back to pages</a><br>
-  <h1>Scratch.mit.edu</h1>
+  <a href="https://coderpro1234.github.io/pages">Back to pages</a>
+  <br><h1>Scratch.mit.edu</h1>
   <h2>is my favourite website</h2>
-  <iframe src="https://scratch.mit.edu/projects/595598460/embed" allowtransparency="true" width="970" height="780" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <iframe src="https://scratch.mit.edu/projects/595598460/embed" allowtransparency="true" width="970" height="780" frameborder="0" scrolling="no" allowfullscreen></iframe><br>
   <a href="https://scratch.mit.edu" target="_blank">This is the link to the website</a><br>
   <a href="https://scratch.mit.edu/projects/editor" target="_blank">This is the link to create your own project</a><br>
   </section>
