--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Scratch</title>
 <meta charset="uft-8">
 <meta name="veiwport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <section id="all">
